Enum "products_status_enum" {
  "out_of_stock"
  "in_stock"
  "running_low"
}

Table "users" {
  "id" int [pk, increment]
  "full_name" varchar(255)
  "created_at" timestamp
  "country_code" int
}

Table "merchants" {
  "id" int [pk]
  "merchant_name" varchar(255)
  "country_code" int [note: 'country of merchant']
  "admin_id" int
  "created_at" datetime [default: `now()`, note: 'created time']
}

Table "countries" {
  "code" int [pk]
  "name" varchar(255)
  "continent_name" varchar(255)
}

Table "order_items" {
  "order_id" int
  "product_id" int
  "quantity" int [default: 1]
}

Table "orders" {
  "id" int [pk]
  "user_id" int [unique, not null]
  "status" varchar(255)
  "created_at" varchar(255) [note: 'When order created']
}

Table "products" {
  "id" int [pk]
  "name" varchar(255)
  "merchant_id" int [not null]
  "price" int
  "status" products_status_enum
  "created_at" datetime [default: `now()`]

Indexes {
  (merchant_id, status) [name: "product_status"]
  id [unique, name: "products_index_1"]
}
}

Ref:"users"."id" < "merchants"."admin_id"

Ref:"orders"."id" < "order_items"."order_id"

Ref:"countries"."code" < "users"."country_code"

Ref:"countries"."code" < "merchants"."country_code"

Ref:"products"."id" < "order_items"."product_id"

Ref:"merchants"."id" < "products"."merchant_id"
